--- a/assignment_1/table_manager.html
+++ b/assignment_1/table_manager.html
@@ -242,7 +242,7 @@ function createTable(){
 	document.write("<td>Organizations less than 10 years old?</td>");
 	document.write("<td>Organizations in North America?</td>");
 	document.write("<td>Organizations with Transportation type of data?</td>");
-	document.write("<td>Organizations in the DMV?</td></tr>");
+	document.write("<td>Organizations in the DMV with High income?</td></tr>");
 	document.write("<tr align = 'center'><td>" + nonProf + "</td>");
 	document.write("<td>" + age + "</td>");
 	document.write("<td>" + northAmerica + "</td>");
